[merge] notebooks from main

--- a/notebooks/1_pytorch_basic.ipynb
+++ b/notebooks/1_pytorch_basic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://pytorch.org/\"><img src=\"https://raw.githubusercontent.com/pytorch/pytorch/master/docs/source/_static/img/pytorch-logo-dark.png\" width=\"600px\"/></a>"
+    "<img src=\"https://raw.githubusercontent.com/pytorch/pytorch/master/docs/source/_static/img/pytorch-logo-dark.png\" width=\"600px\"/>"
    ]
   },
   {
@@ -23,8 +23,8 @@
     "## What is PyTorch?\n",
     "* open-source machine learning library\n",
     "* developed by Facebook AI Research + community\n",
-    "* used in most state-of-the-art research\n",
-    "* \"Python first\": deeply integrated into Python, it should \"feel familiar\" to use"
+    "* used in [most](http://horace.io/pytorch-vs-tensorflow/) state-of-the-art research\n",
+    "* _Python first_: deeply integrated into Python, it should _feel familiar_ to use"
    ]
   },
   {
@@ -42,27 +42,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Useful Links\n",
+    "Useful Links\n",
     "* [🔗 Official PyTorch Documentation](https://pytorch.org/docs/stable/index.html)\n",
     "\n",
     "Tutorials:\n",
     "* [🔗 60 Minute Blitz](https://pytorch.org/tutorials/beginner/deep_learning_60min_blitz.html)\n",
     "* [🔗 PyTorch Tutorials with Examples](https://pytorch.org/tutorials/beginner/pytorch_with_examples.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Attribution\n",
-    "\n",
-    "Most of the material in the theoretical part of this document is taken from the fast.ai [Practical Deep Learning for Coders](https://course.fast.ai/) notebooks.\n",
-    "\n",
-    "In you are interested, check out the colab notebooks from the fast.ai course, especially\n",
-    "* [01_intro](https://colab.research.google.com/github/fastai/fastbook/blob/master/01_intro.ipynb) and \n",
-    "* [04_mnist_basics](https://colab.research.google.com/github/fastai/fastbook/blob/master/04_mnist_basics.ipynb). \n",
-    "\n",
-    "They cover a lot of fundamentals of neural networks and machine learning in general in more depth."
    ]
   },
   {
@@ -76,7 +61,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import numpy as np\n",
-    "import torch"
+    "import torch\n",
+    "\n",
+    "from helpers.train_utils import plot_loss_landscape_3d, plot_loss_landscape_2d"
    ]
   },
   {
@@ -135,7 +122,7 @@
    "outputs": [],
    "source": [
     "a, b = np.random.uniform(low=-2.0, high=2.0, size=2)\n",
-    "a, b"
+    "print(f'{a = }\\n{b = }')"
    ]
   },
   {
@@ -177,8 +164,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Note that the number of samples we generate will influence our results: the more data points we allow the model to learn from, the better our final performance will be.\n",
-    "\n",
     "Let's create our _dependent variable_ $y$ by passing $x$ to our function $f$:"
    ]
   },
@@ -189,32 +174,6 @@
    "outputs": [],
    "source": [
     "y_true = f(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the real world, any data that you obtain will include some kind of noise (e.g. slight deviations in temperature readings due to a given precision of the sensor itself). Luckily, neural networks can handle noisy data quite well. Actually, introducing noise during training (especially for small datasets) can improve the robustness of the network and result in a better generalization (see e.g. [here](https://machinelearningmastery.com/train-neural-networks-with-noise-to-reduce-overfitting/)).\n",
-    "\n",
-    "So, let's go ahead and add some noise to our _true_ $y$ data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we can draw some samples from a normal distribution and add it to our true $y$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "e = np.random.normal(size=y_true.shape, scale=0.5).astype(np.float32)\n",
-    "y_noisy = y_true + e"
    ]
   },
   {
@@ -232,11 +191,41 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "\n",
-    "ax.scatter(x, y_noisy, s=1, color='#90a4ae', alpha=0.75, label='y_noisy')\n",
     "ax.plot(x, y_true, color='#455a64', label='y_true')\n",
     "ax.grid(True, alpha=0.4)\n",
     "ax.legend()\n",
     "fig.tight_layout();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the real world, you usually don't know _true_ process that you are trying to model. You only have some data obtained from observing the process.\n",
+    "\n",
+    "Any measured data will include some kind of noise (e.g. slight deviations in temperature readings due to a given precision of the sensor itself). Luckily, neural networks can handle noisy data quite well. Actually, introducing noise during training (especially for small datasets) can improve the robustness of the network and result in a better generalization (see e.g. [here](https://machinelearningmastery.com/train-neural-networks-with-noise-to-reduce-overfitting/)).\n",
+    "\n",
+    "So, let's go ahead and add some noise to our _true_ $y$ data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = np.random.normal(size=y_true.shape, scale=0.5).astype(np.float32)\n",
+    "y_noisy = y_true + e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax.scatter(x, y_noisy, s=1, color='#90a4ae', alpha=0.75, label='y_noisy')\n",
+    "ax.legend();"
    ]
   },
   {
@@ -340,16 +329,7 @@
    "outputs": [],
    "source": [
     "xx = torch.from_numpy(x).unsqueeze(-1)\n",
-    "yy = torch.from_numpy(y_noisy)\n",
-    "\n",
-    "xx.shape, yy.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Constructing the Training Loop"
+    "yy = torch.from_numpy(y_noisy)"
    ]
   },
   {
@@ -358,7 +338,7 @@
    "source": [
     "As mentioned before, our model parameters are initialized to random values. \n",
     "\n",
-    "Let's see how well our untrained neural network is predicting our line."
+    "Let's have a look at what our model predicts with these intital parameters."
    ]
   },
   {
@@ -367,7 +347,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_training_steps = 200"
+    "n_training_steps = 250\n",
+    "loss_fn = torch.nn.MSELoss()"
    ]
   },
   {
@@ -377,7 +358,7 @@
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(nrows=2, figsize=(6, 6), gridspec_kw={'height_ratios':[0.7, 0.3]})\n",
-    "axes[0].scatter(x, y_noisy, s=0.5, color='#90a4ae', alpha=0.25, label='y_noisy')\n",
+    "axes[0].scatter(x, y_noisy, s=0.5, color='#90a4ae', alpha=0.75, label='y_noisy')\n",
     "axes[0].plot(x, y_true, linewidth=1, label='y_true', color='#455a64')\n",
     "axes[0].set_title('Epoch 0')\n",
     "line_pred = axes[0].plot(x, model(xx).detach().numpy(), label='y_pred', color='#ffa000')[0]\n",
@@ -408,39 +389,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's remind ourselves of the <a href=\"#detailed_loop\">Detailed Training Loop Diagram</a> and compare what we have achieved so far:\n",
+    "### Stochastic Gradient Descent (SGD)\n",
     "\n",
-    "* [x] Collect input data (our tensor `xx`) and\n",
-    "* [x] Corresponding label data (our tensor `yy`)\n",
-    "* [x] Define a model architecture\n",
-    "* [x] Initialize model parameters to random values\n",
-    "* [x] Calculate predictions (our tensor `y_pred`) based on current model parameters and input data\n",
-    "* [ ] Define a loss function to determine the performance\n",
-    "* [ ] Update model parameters based on loss using automated process (Stochastic Gradient Descent)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To update our model parameters, we need to define a suitable loss function. \n",
-    "\n",
-    "We want `y_pred` to exactly match `y_true`, so we need a mathematical way of figuring out how _similar_ our prediction is to our target line.\n",
-    "\n",
-    "We can use the _mean squared error (MSE)_ to achieve this. It is defined like this:\n",
-    "\n",
-    "$\\text{MSE} = \\frac{1}{n} \\sum_{i = 1}^{n} (Y_i - \\hat{Y_i})^2$\n",
-    "\n",
-    "For every data sample $i$, we compute the squared difference of the target value $Y_i$ and the predicted value $\\hat{Y_i}$. The squared differences are then added up accross all sample and divided by the number of samples to yield a single scalar value, the MSE."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Stochastic Gradient Descent (SGD)\n",
-    "\n",
-    "Furthermore, we need the automated process that will find values for our model parameters $w$ and $b$, such that the predictions closely resemble our target line. This is what the SGD algorithm does for us.\n",
+    "As we learned in the ML introduction, we need an automated process that will find values for our model parameters $a$ and $b$, such that the predictions closely resemble our target line. This is what the SGD algorithm does for us.\n",
     "\n",
     "Specifically, these are the steps that are required to make our model learn from its experience:\n",
     "\n",
@@ -457,7 +408,17 @@
     "1. Go back to the step 2, and *repeat* the process.\n",
     "1. Iterate until you decide to *stop* the training process (for instance, because the model is good enough or you don't want to wait any longer).\n",
     "\n",
-    "Essentially, we want SGD to find the (_a_) minimum of our loss function."
+    "Essentially, we want SGD to find the (or _a_) minimum of our loss function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_loss_landscape_3d(a, b, model, loss_fn, xx, yy);\n",
+    "# plot_loss_landscape_2d(a, b, model, loss_fn, xx, yy);"
    ]
   },
   {
@@ -470,13 +431,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "learning_rate = 0.0175\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)"
+    "## Constructing the Training Loop"
    ]
   },
   {
@@ -485,7 +443,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss_fn = torch.nn.MSELoss()\n",
+    "learning_rate = 1e-2\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "losses = np.ones(n_training_steps) * np.infty\n",
     "\n",
     "params_and_loss = torch.zeros((n_training_steps, 3))\n",
@@ -507,7 +474,8 @@
     "    loss = loss_fn(y_pred, yy) # calculate loss\n",
     "\n",
     "    # record current parameter values and loss\n",
-    "    params_and_loss[t] = torch.tensor([*[p.detach() for p in model.parameters()], loss.detach()])\n",
+    "    with torch.no_grad():\n",
+    "        params_and_loss[t] = torch.tensor([*[p for p in model.parameters()], loss])\n",
     "    \n",
     "    # update plots if needed\n",
     "    losses[t] = loss.item()\n",
@@ -527,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we have a look at the model parameters again, we can verfiy that they now closely resemble our _target_ parameters:"
+    "If we have a look at the model parameters again, we can verify that they now closely resemble our _target_ parameters:"
    ]
   },
   {
@@ -536,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[param.item() for param in model.parameters()]"
+    "[(name, tensor.item()) for (name, tensor) in model.named_parameters()]"
    ]
   },
   {
@@ -552,7 +520,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plotting the Weight Landscape"
+    "Note that the number of samples we generate will influence our results: the more data points we allow the model to learn from, the better our final performance will be."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameter Trajectory Through Loss Landscape\n",
+    "\n",
+    "We can now have a look at how our parameter values were optimized during training to reach the minimum of the loss landscape."
    ]
   },
   {
@@ -561,85 +538,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model[0].reset_parameters()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_mesh = 50\n",
-    "\n",
-    "xv, yv = torch.meshgrid(torch.linspace(a - 2, a + 2, n_mesh), torch.linspace(b - 2, b + 2, n_mesh))\n",
-    "zv = torch.zeros_like(xv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with torch.no_grad():\n",
-    "    for i, (x, y) in enumerate(zip(xv.flatten(), yv.flatten())):\n",
-    "        pa, pb = model.parameters()\n",
-    "        pa.copy_(x.reshape(pa.shape))\n",
-    "        pb.copy_(y.reshape(pb.shape))\n",
-    "        loss = loss_fn(model(xx), yy)\n",
-    "        zv.flatten()[i] = loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "min_loss = zv.min().item()\n",
-    "max_loss = zv.max().item()\n",
-    "ax.plot_surface(\n",
-    "    xv.numpy(), yv.numpy(), zv.numpy(),\n",
-    "    cmap=mpl.cm.inferno,\n",
-    "    norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss * 2),\n",
-    "    antialiased=False)\n",
-    "\n",
-    "ax.plot(*params_and_loss.T, zorder=20, color='white')\n",
-    "\n",
-    "ax.set_xlabel('a')\n",
-    "ax.set_ylabel('b')\n",
-    "ax.set_zlabel('MSE')\n",
-    "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "cs = ax.contourf(\n",
-    "    xv.numpy(), yv.numpy(), zv.numpy(), \n",
-    "    levels=np.logspace(np.log10(min_loss), np.log10(max_loss), n_mesh),\n",
-    "    norm=mpl.colors.LogNorm(vmin=min_loss, vmax=max_loss * 2),\n",
-    "    cmap=mpl.cm.inferno)\n",
-    "ax.plot(*params_and_loss.T[:2], color='white', label='model params')\n",
-    "ax.scatter(a, b, color='red', label='target')\n",
-    "ax.text(*(params_and_loss[0, :2] + 0.01), 'initial', color='white')\n",
-    "ax.text(*(params_and_loss[-1, :2] - 0.01), 'final', color='white', ha='right')\n",
-    "\n",
-    "ax.set_xlabel('a')\n",
-    "ax.set_ylabel('b')\n",
-    "ax.set_title('Model parameter trajectory during training')\n",
-    "ax.legend();\n",
-    "fig.tight_layout()"
+    "plot_loss_landscape_3d(a, b, model, loss_fn, xx, yy, param_trajectory=params_and_loss);\n",
+    "# plot_loss_landscape_2d(a, b, model, loss_fn, xx, yy, param_trajectory=params_and_loss);"
    ]
   },
   {
@@ -648,6 +548,8 @@
    "source": [
     "# A Closer Look: Automatic differentiation with ```torch.autograd```\n",
     "\n",
+    "`torch.autograd` is PyTorch’s automatic differentiation engine that powers neural network training.\n",
+    "\n",
     "Adapted from [here](https://pytorch.org/tutorials/beginner/blitz/autograd_tutorial.html#sphx-glr-beginner-blitz-autograd-tutorial-py)."
    ]
   },
@@ -655,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create two tensors `a` and `b` with `requires_grad=True`. This signals to `autograd` that every operation on them should be tracked."
+    "Let’s take a look at how `autograd` collects gradients. We create two tensors `a` and `b` with `requires_grad=True`. This signals to `autograd` that every operation on them should be tracked."
    ]
   },
   {
@@ -674,7 +576,7 @@
    "source": [
     "We create another tensor ```y``` from ```a``` and ```b```:\n",
     "\n",
-    "$ y = 3a^3 - b^2$"
+    "$ y = 2a - b$"
    ]
   },
   {
@@ -683,7 +585,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = 3 * a**3 - b**2\n",
+    "y = 2 * a - b\n",
     "y"
    ]
   },
@@ -693,7 +595,7 @@
    "source": [
     "Let's assume ```a``` and ```b``` to be parameters of a neural network, and ```y``` to be the error. In NN training, we want gradients of the error w.r.t the parameters, i.e.\n",
     "\n",
-    "$ \\frac{\\partial y}{\\partial a} = 9a^2 $ and $\\frac{\\partial y}{\\partial b} = -2b $"
+    "$ \\frac{\\partial y}{\\partial a} = 2 $ and $\\frac{\\partial y}{\\partial b} = -1 $"
    ]
   },
   {
@@ -709,22 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grads = torch.tensor([1., 1., 1.])\n",
-    "# y.backward(gradient=grads)\n",
     "y.backward()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We need to explicitly pass a ```gradient``` argument in ```y.backward()``` if ```y``` is a vector. ```gradient``` is a tensor of the same shape as ```y```, and it represents the gradient of ```y``` w.r.t itself, i.e.\n",
-    "\n",
-    "$ \\frac{\\partial y}{\\partial y} = 1 $\n",
-    "\n",
-    "Note: the ```gradient``` argument only has to be specified if ```y``` is a non-scalar (i.e. its data has more than one element), otherwise it can be created implicitly.\n",
-    "\n",
-    "Think of the ```gradient``` argument as a boolean vector specifying for which elements of ```y``` we want the gradients to be calculated."
    ]
   },
   {
@@ -742,38 +629,6 @@
    "source": [
     "a.grad, b.grad"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's check that they are actually correct:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.grad == 9 * a**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b.grad == -2 * b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
