--- a/notebooks/2_pytorch_advanced.ipynb
+++ b/notebooks/2_pytorch_advanced.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "In this tutorial, we will train a neural network for audio classification using transfer learning. \n",
     "\n",
-    "Some of the code in this example is based on [this](https://github.com/hasithsura/Environmental-Sound-Classification)."
+    "Parts of this example are inspired by [this](https://github.com/hasithsura/Environmental-Sound-Classification)."
    ]
   },
   {
@@ -95,6 +95,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To make sure we are not [overfitting](https://medium.com/greyatom/what-is-underfitting-and-overfitting-in-machine-learning-and-how-to-deal-with-it-6803a989c76), we have to set aside part of our dataset as a [validation set](https://en.wikipedia.org/wiki/Training,_validation,_and_test_sets).\n",
+    "\n",
     "Fortunately, in the docs of the dataset it states\n",
     "\n",
     "> The dataset has been prearranged into 5 folds for comparable cross-validation, making sure that fragments from the same original source file are contained in a single fold.\n",
@@ -109,15 +111,6 @@
    "outputs": [],
    "source": [
     "df['is_valid'] = df['fold'] == 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
    ]
   },
   {
@@ -177,7 +170,7 @@
    "outputs": [],
    "source": [
     "dls = block.dataloaders(df, num_workers=0) # on windows, num_workers needs to be set to 0\n",
-    "# dls.show_batch(figsize=(7,7))"
+    "dls.show_batch(figsize=(7,7))"
    ]
   },
   {
@@ -188,7 +181,10 @@
     "\n",
     "Now, we create a `learner` object by passing it our DataLoaders object and using a pretrained ResNet18 as our architechture.\n",
     "\n",
-    "If you run this the first time, it will download the pretrained ResNet18 parameters."
+    "You also have to specify the metric that you want to use. In our case, as in most classification tasks, we want our model to achieve a high accuracy, which is defined as\n",
+    "$$\n",
+    "\\text{Accuracy} = \\frac{\\text{Number of correct predictions}}{\\text{Total number of predictions}}\n",
+    "$$"
    ]
   },
   {
@@ -198,15 +194,6 @@
    "outputs": [],
    "source": [
     "learn = cnn_learner(dls, models.resnet18, metrics=[accuracy], pretrained=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\text{Accuracy} = \\frac{\\text{Number of correct predictions}}{\\text{Total number of predictions}}\n",
-    "$$"
    ]
   },
   {
@@ -294,7 +281,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interp = ClassificationInterpretation.from_learner(learn)\n",
+    "interp = ClassificationInterpretation.from_learner(learn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "interp.plot_confusion_matrix(figsize=(10, 10))"
    ]
   },
@@ -311,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interp.most_confused(min_val=3)"
+    "interp.most_confused(min_val=2)"
    ]
   },
   {
@@ -619,7 +614,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cmake -S {CPP_SOURCE_DIR} -B {CPP_BUILD_DIR} -DCMAKE_PREFIX_PATH={torch.utils.cmake_prefix_path}"
+    "!cmake -S {CPP_SOURCE_DIR} -B {CPP_BUILD_DIR} -DCMAKE_PREFIX_PATH={torch.utils.cmake_prefix_path}\n",
+    "\n",
+    "# if you're running cmake < 3.14, comment out the previous command and run the following instead\n",
+    "# !pushd {CPP_BUILD_DIR} && cmake .. -DCMAKE_PREFIX_PATH={torch.utils.cmake_prefix_path} && popd"
    ]
   },
   {
@@ -706,15 +704,6 @@
    "outputs": [],
    "source": [
     "outputs = next(torch.load(outputs_path).parameters())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "outputs[0]"
    ]
   },
   {
@@ -908,26 +897,6 @@
     "\n",
     "widgets.VBox([widgets.HBox([btn_upload, label_upload]), audio_player, btn_classify, output])"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Congratulations!\n",
-    "\n",
-    "You have successfully \n",
-    "\n",
-    "* trained a neural network to classify audio examples into 50 categories\n",
-    "* built a C++ application to load and run the trained model\n",
-    "* created small interactive applications to analyze the results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
