--- a/notebooks/3_pytorch_advanced_colab.ipynb
+++ b/notebooks/3_pytorch_advanced_colab.ipynb
@@ -150,6 +150,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To make sure we are not [overfitting](https://medium.com/greyatom/what-is-underfitting-and-overfitting-in-machine-learning-and-how-to-deal-with-it-6803a989c76), we have to set aside part of our dataset as a [validation set](https://en.wikipedia.org/wiki/Training,_validation,_and_test_sets).\n",
+    "\n",
     "Fortunately, in the docs of the dataset it states\n",
     "\n",
     "> The dataset has been prearranged into 5 folds for comparable cross-validation, making sure that fragments from the same original source file are contained in a single fold.\n",
@@ -164,15 +166,6 @@
    "outputs": [],
    "source": [
     "df['is_valid'] = df['fold'] == 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
    ]
   },
   {
@@ -243,7 +236,10 @@
     "\n",
     "Now, we create a `learner` object by passing it our DataLoaders object and using a pretrained ResNet18 as our architechture.\n",
     "\n",
-    "If you run this the first time, it will download the pretrained ResNet18 parameters."
+    "You also have to specify the metric that you want to use. In our case, as in most classification tasks, we want our model to achieve a high accuracy, which is defined as \n",
+    "$$\n",
+    "\\text{Accuracy} = \\frac{\\text{Number of correct predictions}}{\\text{Total number of predictions}}\n",
+    "$$"
    ]
   },
   {
@@ -253,15 +249,6 @@
    "outputs": [],
    "source": [
     "learn = cnn_learner(dls, models.resnet18, metrics=[accuracy], pretrained=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\text{Accuracy} = \\frac{\\text{Number of correct predictions}}{\\text{Total number of predictions}}\n",
-    "$$"
    ]
   },
   {
@@ -772,15 +759,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "outputs[0]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -971,33 +949,6 @@
     "\n",
     "widgets.VBox([widgets.HBox([btn_upload, label_upload]), audio_player, btn_classify, output])"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Congratulations!\n",
-    "\n",
-    "You have successfully \n",
-    "\n",
-    "* trained a neural network to classify audio examples into 50 categories\n",
-    "* built a C++ application to load and run the trained model\n",
-    "* created small interactive applications to analyze the results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
