--- a/notebooks/2_pytorch_advanced.ipynb
+++ b/notebooks/2_pytorch_advanced.ipynb
@@ -132,9 +132,9 @@
     "\n",
     "A fast.ai [`DataBlock`](https://docs.fast.ai/data.block.html#DataBlock) is a convenient way of organizing our data into a form that can be used during the training phase. \n",
     "\n",
-    "> By itself, a DataBlock is just a blue print on how to assemble your data. It does not do anything until you pass it a source. You can choose to then convert that source into a Datasets or a DataLoaders by using the DataBlock.datasets or DataBlock.dataloaders method.\n",
+    "> By itself, a DataBlock is just a blue print on how to assemble your data. It does not do anything until you pass it a source. You can choose to then convert that source into a `Datasets` or a `DataLoaders` by using the `DataBlock.datasets` or `DataBlock.dataloaders` method.\n",
     "\n",
-    "If you want to know more about DataBlocks, have a look at this [tutorial](https://docs.fast.ai/tutorial.datablock.html)."
+    "If you want to know more about `DataBlock`s, have a look at this [tutorial](https://docs.fast.ai/tutorial.datablock.html)."
    ]
   },
   {
@@ -144,7 +144,8 @@
    "outputs": [],
    "source": [
     "audio2spec = AudioToSpec.from_cfg(AudioConfig.BasicMelSpectrogram(sample_rate=16000, n_fft=2048, hop_length=512, n_mels=128))\n",
-    "normalize = AudioNormalize()"
+    "normalize = AudioNormalize()\n",
+    "gray2rgb = SpectrogramToFakeRGB()"
    ]
   },
   {
@@ -159,7 +160,7 @@
     "    get_x = ColReader('filename', pref=DATASET_ROOT/'audio'),\n",
     "    get_y = ColReader('category'),\n",
     "    item_tfms=[normalize],\n",
-    "    batch_tfms=[audio2spec],\n",
+    "    batch_tfms=[audio2spec, gray2rgb],\n",
     ")"
    ]
   },
@@ -170,7 +171,7 @@
    "outputs": [],
    "source": [
     "dls = block.dataloaders(df, num_workers=0) # on windows, num_workers needs to be set to 0\n",
-    "dls.show_batch(figsize=(7,7))"
+    "#dls.show_batch(figsize=(7,7))"
    ]
   },
   {
@@ -194,38 +195,6 @@
    "outputs": [],
    "source": [
     "learn = cnn_learner(dls, models.resnet18, metrics=[accuracy], pretrained=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The ResNet models work on RGB images, i.e. the input layer expects an image with three channels. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learn.model[0][0].in_channels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Our spectrograms only have a single channel, so we need to modify the first layer of the model slightly to take our spectrograms as input."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "make_xresnet_grayscale(learn.model)"
    ]
   },
   {
@@ -259,7 +228,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn.fine_tune(5)"
+    "learning_rate, _ = learn.lr_find(show_plot=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn.fit_one_cycle(5, learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate, _ = learn.lr_find(show_plot=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn.unfreeze()\n",
+    "learn.fit_one_cycle(10, lr_max=slice(1e-5, learning_rate))"
    ]
   },
   {
@@ -268,7 +265,7 @@
    "source": [
     "## Interpreting the Training Results\n",
     "\n",
-    "After 5 epochs of training, you should see an accuracy of ~65 %. This may not seem very impressive at first but keep in mind that we just trained the model for a couple of minutes. Also, we are working with 50 output classes! \n",
+    "After 5 epochs of training, you should see an accuracy of >70 %. This may not seem very impressive at first but keep in mind that we just trained the model for a couple of minutes. Also, we are working with 50 output classes! \n",
     "\n",
     "If you have a look at the [original experiment](https://github.com/hasithsura/Environmental-Sound-Classification), you can see that with some further training it is easy to achieve an accuracy of over 85 %.\n",
     "\n",
@@ -290,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interp.plot_confusion_matrix(figsize=(10, 10))"
+    "interp.plot_confusion_matrix(figsize=(8, 8))"
    ]
   },
   {
@@ -342,7 +339,7 @@
     "    learn.model.to('cpu')\n",
     "    \n",
     "# create some dummy input \n",
-    "dummy_input = torch.randn([1, 1, 128, 157])\n",
+    "dummy_input = torch.randn([1, 3, 128, 157])\n",
     "    \n",
     "# process the trace\n",
     "traced_script_module = torch.jit.trace(learn.model, dummy_input)"
@@ -383,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn.model(torch.randn(1, 1, 128, 157))"
+    "learn.model(torch.randn(1, 3, 128, 157))"
    ]
   },
   {
@@ -479,12 +476,12 @@
     "    '368804__inspectorj__sneeze-single-b.wav': 'sneezing',\n",
     "    '347544__masgame__mouse-click-sounds.wav': 'mouse_click',\n",
     "    '207457__aureliosons__avion-de-elices.wav': 'airplane',\n",
-    "    '27130__pryght-one__harp.wav': 'harp (unknown category)',\n",
+    "    '27130__pryght-one__harp.wav': 'harp (unknown)',\n",
     "    '439667__teumova__child-laughing.wav': 'laughing',\n",
-    "    '515685__acekat13__adriana-lopez-coffee-machine.wav': 'coffee_machine (unknown category)',\n",
+    "    '515685__acekat13__adriana-lopez-coffee-machine.wav': 'coffee_machine (unknown)',\n",
     "    '544376__kingrock2009__siren-1.wav': 'siren',\n",
     "    '362283__zachrau__sheep-bleating.wav': 'sheep',\n",
-    "    '550708__erokia__msfxp9-14-synth-loop-100-bpm.wav': 'synth_loop (unknown category)'\n",
+    "    '550708__erokia__msfxp9-14-synth-loop-100-bpm.wav': 'synth_loop (unknown)'\n",
     "}"
    ]
   },
@@ -513,8 +510,9 @@
     "resize_to_5s = ResizeSignal(5000, pad_mode=AudioPadType.Zeros_After)\n",
     "resample_to_16khz = Resample(16000)\n",
     "downmix = DownmixMono()\n",
+    "gray2rgb_single = SpectrogramToFakeRGB(as_batch_tfm=False)\n",
     "\n",
-    "transforms = Pipeline([AudioTensor.create, resize_to_5s, downmix, resample_to_16khz, normalize, audio2spec])"
+    "transforms = Pipeline([AudioTensor.create, resize_to_5s, downmix, resample_to_16khz, normalize, audio2spec, gray2rgb_single])"
    ]
   },
   {
@@ -790,10 +788,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def on_dropdown(_):\n",
+    "def on_dropdown(change):\n",
     "    output.clear_output()\n",
     "    with output:\n",
-    "        print_top_results(dropdown.index, outputs_prob, test_labels, dls.vocab)\n",
+    "        print_top_results(change['new'], outputs_prob, test_labels, dls.vocab)\n",
     "    \n",
     "dropdown.observe(on_dropdown, names=['index'])"
    ]
@@ -819,10 +817,10 @@
    "outputs": [],
    "source": [
     "output_plot = widgets.Output()\n",
-    "def on_dropdown(_):\n",
+    "def on_dropdown(change):\n",
     "    output_plot.clear_output()\n",
     "    with output_plot:\n",
-    "        fig, _ = plot_top_results(outputs_prob[dropdown.index], dls.vocab, show_max=10, figsize=(5,3))\n",
+    "        fig, _ = plot_top_results(outputs_prob[change['new']], dls.vocab, show_max=10, figsize=(5,3))\n",
     "        fig.canvas.toolbar_visible = False\n",
     "        fig.tight_layout()\n",
     "dropdown.observe(on_dropdown, names=['index'])\n",
@@ -876,7 +874,7 @@
     "\n",
     "    # load tensor from tmp file and apply transforms\n",
     "    spec = torch.tensor(transforms(tmp.name))\n",
-    "    probs = model(spec.unsqueeze(0)).softmax(dim=1).squeeze().detach()\n",
+    "    probs = model(spec.unsqueeze(0)).detach().softmax(dim=1).squeeze()\n",
     "    result_idx = probs.argmax()\n",
     "    output.clear_output()\n",
     "    with output:\n",
